# Sparrow-Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/DamagedHelmet/: DamagedHelmet.gltf  license.txt
assets/animations/bvh/: 05_06.bvh  example1.bvh  rest.bvh
assets/models/DamagedHelmet/: DamagedHelmet.gltf  license.txt
assets/shaders/: final.frag  ssao_blur.frag  ssao_lighting.frag
assets/shaders/blur/: gaussblur.frag  gaussblur.vert
assets/shaders/light/: light.frag  light.vert
assets/shaders/mrt/: mrt.frag  mrt.vert
assets/shaders/plane/: pbr_base.frag  pbr_base.vert  plane.frag  plane_depth.frag  plane_depth.vert
assets/shaders/skybox/: cubemap.vert
assets/shaders/skybox/cubemap/: skybox_cubemap.vert
assets/shaders/terrain/: terrain.frag  terrain.tesc  terrain.tese  terrain.vert
build_cmake/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  OpenFBX.vcxproj  OpenFBX.vcxproj.filters  Sparrow-Library.vcxproj  Sparrow-Library.vcxproj.filters  Sparrow-Renderer.sln  Sparrow-Renderer.vcxproj  Sparrow-Renderer.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  imgui.vcxproj  imgui.vcxproj.filters
build_cmake/maths/: INSTALL.vcxproj  INSTALL.vcxproj.filters  Sparrow-Maths.vcxproj  Sparrow-Maths.vcxproj.filters  cmake_install.cmake
maths/: CMakeLists.txt  Hello.cpp  Hello.h
maths/T/: test.h
src/: Application.cpp  Application.hpp
src/Core/Log/: LogSystem.cpp  LogSystem.h
src/Core/Maths/: Exp.hpp  GaussianKernel.hpp  MathUtils.cpp  MathUtils.h  Maths.cpp  Maths.h  Plane.cpp  Plane.h  Pow.hpp  Transform.cpp  Transform.h
src/Core/Pattern/: RuntimeStateManager.hpp  Singleton.hpp
src/Core/Utils/: MarCrossF.h  Utility.hpp
src/Function/Animation/: AnimClip.h  BVHAnim.cpp  BVHAnim.hpp
src/Function/Base/: Transform.hpp
src/Function/Controller/: Camera.cpp  Camera.h  MouseCursor.h
src/Function/ImGui/: ImGuiDefinitions.h  ImGuiDockSpace.h  ImGuiManager.h
src/Function/ImGui/ImGuiPanels/: ImGuiInspectorPanel.hpp  ImGuiMenuBar.hpp  ImGuiObjectPanel.hpp  ImGuiPanel.hpp  ImGuiTreeNodePanel.hpp
src/Function/Physics/: Cloth.cpp  Cloth.h  MassNode.h  Spring.cpp  Spring.h
src/Function/Render/: Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshRenderer.h  Model.h  RenderDefinitions.h  Renderer.hpp  Skin.h  Texture2D.cpp  Texture2D.h  TextureCube.cpp  TextureCube.h
src/Function/Render/ModelLoader/: AssimpLoader.cpp  FBXLoader.cpp  OBJLoader.cpp
src/Function/Render/Prototype/: Cone.cpp  Cone.hpp  Cylinder.cpp  Cylinder.hpp  Header.h  Prototype.cpp  Prototype.hpp
src/Function/Render/RHI/: BufferData.h  FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Shader.h  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.hpp
src/Platform/FileSystem/: FileDefinitions.h  FileSystem.cpp  FileSystem.h
src/Platform/WindowSystem/: WindowSystem.cpp  WindowSystem.h
src/Resource/: Asset.h  AssetDataSupport.inl  AssetManager.h  Mesh_new.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  StaticMesh.h  Vertex_new.h
src/Tests/: Scene.hpp  Scene01_Triangle.hpp  Scene02_RollingCubes.hpp  Scene03_BasicLighting.hpp  Scene04_TwoSpheres.hpp  Scene06_ShadowMapping.hpp  Scene07_PBR.hpp  Scene08_PointShadow.hpp  SceneManager.hpp  ScenePreCompiled.h  Scene_BVHViewer.hpp  Scene_ClothSimulationSS1.hpp  Scene_ClothSimulationSS2.hpp  Scene_LoadModel.hpp  Scene_PBRTest.hpp
src/Tests/PrimitiveObjects/: Plane.hpp  UVSphere.hpp
